Avoid deprecated functions MODPERMS-158 (#138)